--- a/YLMES/Web.config
+++ b/YLMES/Web.config
@@ -56,7 +56,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-  <add name="YLMES_newEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.251;initial catalog=YLMES_new;user id=admin;password=admin123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="YLMES_newEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.251;initial catalog=YLMES_new;user id=admin;password=admin123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
