--- a/YLMES/YLMES.csproj
+++ b/YLMES/YLMES.csproj
@@ -1918,6 +1918,9 @@
     <Compile Include="Models\POcheck_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\PoNoCheck_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ProcessBOM_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
